refactoring_2023_05_24 refactoring